--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ coloque nas sessões indicadas*/
   --cor-de-link: #000;
   --cor-de-fundo2: #eaf2fd;
   --cor-de-skills: #fff;
-  --cor-de-button: #2A7AE4;
-  --cor-de-input: #A2A2A2;
-  --cor-de-border: #C8C8C8;
-  --cor-de-hover: #5595E9;
-  --cor-de-hover2: #D4E4FA;
+  --cor-de-button: #2a7ae4;
+  --cor-de-input: #a2a2a2;
+  --cor-de-border: #c8c8c8;
+  --cor-de-hover: #5595e9;
+  --cor-de-hover2: #d4e4fa;
 }
 
 body {
@@ -33,7 +33,6 @@ a {
   text-decoration: none;
   color: var(--cor-de-link);
 }
-
 /*Neste desafio, gostariamos que praticassem a metodologia BEM, caso se sintam a vontade 
 de utiliza-la. 
 
@@ -50,7 +49,7 @@ https://en.bem.info/methodology/quick-start/*/
 /*Sessão Menu*/
 
 section.menu {
-  width: 1136px;
+  max-width: 1136px;
   height: 88px;
   display: flex;
   margin: auto;
@@ -76,7 +75,7 @@ header > img {
   font-family: "Raleway";
 }
 
-.menu__list__item:nth-child(6){
+.menu__list__item:nth-child(6) {
   font-weight: 700;
 }
 
@@ -84,7 +83,7 @@ header > img {
 
 section.title {
   margin: auto;
-  width: 1136px;
+  max-width: 1136px;
   height: 368px;
   display: flex;
   padding: 32px 0px;
@@ -108,12 +107,11 @@ section.title {
   display: flex;
   padding-inline-start: 0px;
   gap: 50px;
-
 }
 
-.title > img {
-  width: 368px;
-  height: 368px;
+.title__profile {
+  max-width: 368px;
+  max-height: 368px;
   border-radius: 100%;
 }
 /*Sessão About*/
@@ -123,7 +121,7 @@ section.about {
 }
 
 .about__container {
-  width: 1136px;
+  max-width: 1136px;
   margin: auto;
   padding: 64px 0px;
   line-height: 1.2;
@@ -142,11 +140,11 @@ section.about {
 }
 
 .skills__line {
-  width: 1136px;
+  max-width: 1136px;
   height: 174px;
   margin: auto;
   display: flex;
-  gap: 15px;
+  gap: 16px;
 }
 
 .skills__box {
@@ -157,12 +155,10 @@ section.about {
   align-items: flex-end;
 }
 
-.skills__box>img{
-
-}
-
 /*Sessão Hobbies*/
-
+.hobbies{
+  margin-bottom: 32px;
+}
 .hobbies__title {
   text-align: center;
   font-size: 32px;
@@ -170,11 +166,11 @@ section.about {
 }
 
 .hobbies__line {
-  width: 1136px;
+  max-width: 1136px;
   height: 174px;
   margin: auto;
   display: flex;
-  gap: 15px;
+  gap: 16px;
 }
 
 .hobbies__box {
@@ -189,112 +185,106 @@ section.about {
 
 section.academic {
   background-color: var(--cor-de-fundo2);
+  max-height: 581px;
+  padding: 82px;
 }
 
-.academic__title{
-    text-align: center;
-    padding-top: 82px;
-    font-size: 32px;
-    font-weight: 700;
+.academic__title {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  margin: 0 0 32px;
 }
 
-.academic__courses{
-    width: 1136px;
-    height: 347px;
-    margin: auto;
-    display: flex;
-    padding-bottom: 82px;
-    gap: 15px;
+.academic__courses {
+  max-width: 1136px;
+  display: flex;
+  gap: 16px;
+  margin: auto;
 }
 
-.academic__courses__list{
-    width: 368px;
-    height: 347px;
-    padding-inline-start: 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    
+.academic__courses__list {
+  padding-inline-start: 0px;
+  margin: 0;
 }
 
-.academic__courses__item__img{
-    width: 368px;
-    height: 286px;
-    background-color: var(--cor-de-skills);
-    align-content:center;
+.academic__courses__item__img {
+  width: 368px;
+  height: 286px;
+  background-color: var(--cor-de-skills);
+  align-content: center;
 }
 
-.academic__courses__item__img>img{
-    width: 192px;
-    height: 130px;
-    margin-inline-start: 25%;
+.academic__courses__item__img > img {
+  max-width:  52%;
+  margin-inline-start: 25%;
+
 }
 
-.academic__courses__item__title{
-    height: 26px;
+.academic__courses__item__title {
+  max-height: 26px;
 }
-.academic__courses__item__title>h4{
-    font-size: 22px;
-    margin-top: 10px;
+.academic__courses__item__title > h4 {
+  font-size: 22px;
+  margin-top: 10px;
 }
-
 
 /* experiência*/
 
-section.experience{
-    width: 1136px;
-    margin: auto;
+section.experience {
+  max-width: 1136px;
+  margin: auto;
 }
 
 .experience__section__title {
-    text-align: center;
-    margin-top: 32px;
+  text-align: center;
+  margin-top: 32px;
 }
 
-.experience__box{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-top: 32px;
+.experience__box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 32px;
 }
 
-.experience__title{
-    font-size: 22px;
-    font-weight: 700;
+.experience__title {
+  font-size: 22px;
+  font-weight: 700;
 }
 
-.experience__text{
-    font-size: 16px;
-    font-weight: 300;
+.experience__text {
+  font-size: 16px;
+  font-weight: 300;
 }
 
-.experiencia__botao--repo{
-    width: 116px;
-    height: 51px;
-    color: var(--cor-de-button);
-    border: 2px solid var(--cor-de-button);
-    font-family: 'Raleway';
+.experiencia__botao--repo {
+  width: 116px;
+  height: 51px;
+  color: var(--cor-de-button);
+  border: 2px solid var(--cor-de-button);
+  font-family: "Raleway";
 }
 
-.experiencia__botao--repo:hover{
+.experiencia__botao--repo:hover {
   background-color: var(--cor-de-hover2);
 }
 
-.experiencia__botao--demo{
-    width: 105px;
-    height: 51px;
-    color: var(--cor-de-skills);
-    border: 2px solid var(--cor-de-button);
-    background-color: var(--cor-de-button);
-    font-family: 'Raleway';
+.experiencia__botao--demo {
+  width: 105px;
+  height: 51px;
+  color: var(--cor-de-skills);
+  border: 2px solid var(--cor-de-button);
+  background-color: var(--cor-de-button);
+  font-family: "Raleway";
 }
 
-.experiencia__botao--demo:hover{
+.experiencia__botao--demo:hover {
   background-color: var(--cor-de-hover);
   border: 2px solid var(--cor-de-hover);
 }
 
-.experience__img{
+.experience__img {
   max-width: 772px;
   max-height: 426px;
 }
@@ -302,120 +292,115 @@ section.experience{
 /*Contato*/
 
 section.formcontato {
-    background-color: var(--cor-de-fundo2);
-    padding-top: 128px;
-    margin-top: 32px;
+  background-color: var(--cor-de-fundo2);
+  padding-top: 128px;
+  margin-top: 32px;
 }
 
-.formcontato__contacto{
+.formcontato__contacto {
   display: flex;
-  width: 1136px;
+  max-width: 1136px;
   height: 788px;
   margin: auto;
-  gap:15px;
+  gap: 15px;
 }
 
-.formcontato__img{
+.formcontato__img {
   width: 464px;
   height: 593px;
   display: block;
 }
 
-.formcontato__text{
-  width: 100%;
-}
-
-.formcontato__title{
+.formcontato__title {
   font-size: 32px;
   font-weight: 700;
-  margin: 0px;
-  margin-bottom: 8px;
+  margin: 0 0 8px;
 }
 
-.formcontato__subtext{
+.formcontato__subtext {
   font-size: 16px;
   font-weight: 300;
-  margin: 5px;
+  margin: 5px 0 5px;
 }
 
-.formcontato__form{
+.formcontato__form {
   display: flex;
   flex-direction: column;
   gap: 32px;
-  margin-top: 28px;
+  margin-top: 32px;
+  position: relative;
 }
 
-.formcontato__input{
+.formcontato__input {
   height: 30px;
-  padding-left: 16px;
-  padding-top: 26px;
+  padding: 26px 0 0 16px;
   border: none;
   border-radius: 5px;
   border-bottom: 1px solid var(--cor-de-border);
   font-size: 16px;
-  font-family: 'Raleway';
+  font-family: "Raleway";
 }
 
 .formcontato__input:focus + label,
-.formcontato__input:not(:placeholder-shown) + label{
+.formcontato__input:not(:placeholder-shown) + label {
   transition: transform 2s, font-size 2s;
-  transform: translate(-10px,-15px);
+  transform: translate(-10px, -15px);
   font-size: 12px;
 }
-.formcontato__input:not(:focus) + label{
-  transition: transform 2s,font-size 2s;
+.formcontato__input:not(:focus) + label {
+  transition: transform 2s, font-size 2s;
 }
 
-.formcontato__label__nome{
+.formcontato__label__nome {
   position: absolute;
   color: var(--cor-de-input);
-  top: 4238px;
-  right: 701px;
+  top: 20px;
+  left: 20px;
 }
 
-.formcontato__label__email{
+.formcontato__label__email {
   position: absolute;
   color: var(--cor-de-button);
-  top: 4328px;
-  right: 697px; 
+  top: 110px;
+  left: 20px;
 }
 
-.formcontato__label__assunto{
+.formcontato__label__assunto {
   position: absolute;
-  top: 4418px;
-  right: 686px;
+  top: 200px;
+  left: 20px;
   color: var(--cor-de-input);
 }
 
-.formcontato__label__mensagem{
+.formcontato__label__mensagem {
   position: absolute;
-  top: 4500px;
-  right: 664px;
+  top: 280px;
+  left: 20px;
   color: var(--cor-de-input);
 }
 
-.formcontato__textarea{
+.formcontato__textarea {
   height: 101px;
   border: none;
   padding: 16px;
   border-radius: 5px;
   border-bottom: 1px solid var(--cor-de-border);
   font-size: 16px;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   resize: none;
 }
 
 .formcontato__textarea:focus + label,
-.formcontato__textarea:not(:placeholder-shown) + label{
+.formcontato__textarea:not(:placeholder-shown) + label {
   transition: transform 2s, font-size 2s;
-  transform: translate(-20px,-5px);
+  transform: translate(-10px, -5px);
   font-size: 12px;
 }
-.formcontato__textarea:not(:focus) + label{
-  transition: transform 2s,font-size 2s;
+.formcontato__textarea:not(:focus) + label {
+  transition: transform 2s, font-size 2s;
 }
 
-.formcontato__botao{
+.formcontato__botao {
   background-color: var(--cor-de-button);
   color: var(--cor-de-skills);
   width: 165px;
@@ -424,20 +409,20 @@ section.formcontato {
   font-size: 16px;
 }
 
-.formcontato__botao:hover{
+.formcontato__botao:hover {
   background-color: var(--cor-de-hover);
   border: var(--cor-de-hover);
 }
 
-.formcontato__botao:disabled{
+.formcontato__botao:disabled {
   background-color: grey;
 }
 
-.preenchido{
+.preenchido {
   border: 1px solid rgb(2, 248, 2);
 }
 
-.vazio{
+.vazio {
   border: 1px solid rgba(255, 0, 0, 0.808);
 }
 
@@ -448,38 +433,275 @@ section.footer {
   background-color: var(--cor-de-skills);
 }
 
-.footer__rodape{
-  width: 1136px;
+.footer__rodape {
+  max-width: 1136px;
   margin: auto;
-  text-align:center;
-
+  text-align: center;
 }
 
-.footer__rodape>p{
+.footer__rodape > p {
   margin: 0px;
   padding: 5px;
 }
 
-.footer__rodape:nth-child(1){
+.footer__rodape:nth-child(1) {
   padding-top: 32px;
+}
+
+@media (max-width:1300px) {
+  section.academic{
+    padding: 40px;
+  }
+
+  .academic__courses{
+    justify-content: center;
+  }
+  .academic__courses__list{
+    width: 300px;
+  }
+  .academic__courses__item__img {
+    max-width: 300px;
+    max-height: 200px;
+  }
+
+  .academic__courses__item__img > img {
+    max-width: 142px;
+    max-height: 90px;
+  }
 }
 
 /* Chegou a hora de se desafiar com a responsividade, 
 utilize como referência os breakpoints @media abaixo*/
 
 /*Tablet*/
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 992px) {
   /* Menu */
+  section.menu {
+    max-width: 768px;
+    height: 56px;
+  }
 
+  .menu__list__item{
+    display: none;
+  }
+
+  .menu__list__item:nth-child(6) {
+    font-weight: 700;
+    display: block;
+  }
   /*title*/
+  section.title {
+    max-width: 768px;
+    height: 210px;
+  }
 
+  .title__bio {
+    font-size: 22px;
+  }
+  
+  .title__subsection {
+    font-size: 16px;
+  }
+  
+  .title__profile {
+    max-width: 146px;
+    max-height: 146px;
+    border-radius: 100%;
+  }
+  /*Sessão About*/
+.about__container {
+  max-width: 768px;
+  padding: 32px 0px;
+}
+
+.about__title {
+  font-size: 22px;
+}
+
+.about__paragraph{
+  font-size: 14px;
+}
   /*Skills*/
-
+  .skills__title {
+    font-size: 22px;
+    margin: 32px 0px;
+  }
+  
+  .skills__line {
+    max-width: 704px;
+    height: 272px;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    align-items: center;
+    padding: 0 32px;
+  }
+  
+  .skills__box {
+    width: 224px;
+    height: 118px;
+  }
   /*Hobbies*/
-
+  .hobbies__title {
+    font-size: 22px;
+    margin: 32px 0;
+  }
+  
+  .hobbies__line {
+    max-width: 704px;
+    height: 272px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 32px;
+  }
+  
+  .hobbies__box {
+    width: 224px;
+    height: 118px;
+  }
   /*Experiências acadêmicas*/
+  section.academic{
+    padding: 0;
+  }
 
+  .academic__title {
+    padding: 32px 0;
+    font-size: 22px;
+    font-weight: 700;
+    margin:0;
+  }
+  
+  .academic__courses {
+    max-width: 768px;
+    height: auto;
+    padding-bottom: 0;
+    justify-content: center;
+  }
+  
+  .academic__courses__list {
+    width: 224px;
+    height: auto;
+    padding-inline-start: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0;
+    margin-bottom: 8px;
+  }
+  
+  .academic__courses__item__img {
+    width: 224px;
+    height: 118px;
+    align-content: center;
+  }
+  
+  .academic__courses__item__img > img {
+    max-width: 102px;
+    max-height: 60px;
+  }
+  
+  .academic__courses__item__title {
+    height: 19px;
+    margin: 10px;
+  }
+  .academic__courses__item__title > h4 {
+    font-size: 16px;
+  }
+  .academic__courses__item__subtitle {
+    margin: 10px;
+  }
+  .academic__courses__item__subtitle > p{
+    font-size: 14px;
+  }
   /*Expeirência profissional*/
+  section.experience {
+    max-width: 768px;
+    margin: auto;
+  }
+  
+  .experience__section__title {
+    text-align: center;
+    margin: 32px 0 16px;
+    font-size: 22px;
+  }
+  
+  .experience__box {
+    align-items: start;
+    gap: 0px;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .experience__info{
+    order: 2;
+    margin: 0 0 64px;
+  }
+  .experience__info:first-child{
+    order: 2;
+    margin: 0 0 32px;
+  }
+  
+  .experience__title {
+    font-size: 16px;
+  }
+  
+  .experience__text {
+    font-size: 14px;
+  }
+  
+  .experiencia__botao--repo {
+    width: 108px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  
+  
+  .experiencia__botao--demo {
+    width: 96px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  
+  .experience__img {
+    max-width: 772px;
+    max-height: 426px;
+  }
+  /*Contato*/
+
+section.formcontato {
+  padding: 32px;
+  margin-top: 0px;
+}
+
+.formcontato__contacto {
+  max-width: 768px;
+  max-height: 573px;
+}
+
+.formcontato__img {
+  display: none;
+}
+
+.formcontato__title {
+  font-size: 22px;
+  margin-bottom: 8px;
+}
+
+.formcontato__subtext {
+  margin: 5px 0 5px;
+}
+
+.formcontato__input {
+  width: 704px;
+}
+
+
+.formcontato__botao {
+  width: 151px;
+  height: 40px;
+  font-size: 14px;
 }
 
 /*Mobile*/
