--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ section.footer {
 }
 
 .footer__rodape:nth-child(1) {
-  padding: 32px 0;
+  padding: 32px 0 0;
 }
 
 @media (max-width:1300px) {
